tests/ui/get_ard.stderr
error[E0505]: cannot move out of `stmt` because it is borrowed
  --> $DIR/get_ard.rs:51:36
   |
49 |     SQLGetStmtAttrA(&stmt, SQL_ATTR_APP_ROW_DESC, Some(&mut desc), None);
   |                     ----- borrow of `stmt` occurs here
50 |
51 |     SQLFreeHandle(SQL_HANDLE_STMT, stmt);
   |                                    ^^^^ move out of `stmt` occurs here
52 |     drop(desc);
   |          ---- borrow later used here
